--- a/biome.json
+++ b/biome.json
@@ -13,6 +13,7 @@
     },
     "rules": {
       "complexity": {
+        "noStaticOnlyClass": "off",
         "noUselessConstructor": "info",
         "noUselessStringConcat": "error"
       },
@@ -49,6 +50,7 @@
         "useDefaultSwitchClause": "error",
         "useExportType": "info",
         "useGroupedAccessorPairs": "error",
+        "useNodejsImportProtocol": "error",
         "useObjectSpread": "error",
         "useShorthandAssign": "error",
         "useSingleVarDeclarator": "error",
