--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@yboyer/config",
-  "version": "0.1.0-rc.0",
+  "version": "1.0.0",
   "description": "",
   "homepage": "https://github.com/yboyer/config",
   "repository": {
